人脸识别详细数据上传至ftp